# check-requirements-txt

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  check_requirements_txt.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  lint.yml  manual-test.yml  publish.yml  python-publish.yml  release.yml
scripts/: benchmark.py  release.sh
src/check_requirements_txt/: __about__.py  __init__.py  __main__.py
tests/: test_core.py
