[metadata]
name = check_requirements_txt
version = 1.0.2
description = Check the missing packages in requirements.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ferstar/check-requirements-txt
author = ferstar
author_email = zhangjianfei3@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = check_requirements_txt
install_requires =
    stdlib_list
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    check-requirements-txt = check_requirements_txt:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
